Added Property details section and fixed property-schema

--- a/ui/pages/schema_home/index.html
+++ b/ui/pages/schema_home/index.html
@@ -53,7 +53,7 @@
                 </li>
 
                 <li >
-                    <a href="#classes" onclick="showAllClasses()">Schemas</a>
+                    <a href="#classes" onclick="showAllClasses()">Classes</a>
                 </li>
                 <li>
                     <a href="./">Home</a>
@@ -148,6 +148,8 @@
     </section>
     <section id="class_property_section" class="container section">
             <div id="mainContent">
+                    <h1 id="class_label"></h1>
+                    <p id="class_desc"></p>
             <table id="schema_section" class="definition-table">
                 <thead>
                     <tr>
@@ -160,7 +162,15 @@
                 </tbody>
             </table>
             </div>
-        </section>
+    </section>
+    <section id="property_details_section" class="container section">
+        <div id="mainContent">
+            <div id="property_details">
+
+            </div>
+                
+        </div>
+    </section>
     
     <footer id="footer">
             <p>&copy; 2020 <a href="https://iudx.org.in" target="_blank">IUDX</a></p>
